_sass/_pagination.scss
// Pagination
//
// Super lightweight (HTML-wise) blog pagination. `span`s are provide for when
// there are no more previous or next posts to show.

.pagination {
  color: #ccc;
  margin: 0 -1.5rem 1rem;
  overflow: hidden; // clearfix
  text-align: center;
}

// Pagination items can be `span`s or `a`s
.pagination-item {
  border: 1px solid $white-sand;
  border-width: 1px 0;
  display: block;
  padding: 1rem;

  &:first-child {
    margin-bottom: -1px;
  }
}

// Only provide a hover state for linked pagination items
a.pagination-item:hover {
  background: #f5f5f5;
}

@media (min-width: 30em) {
  .pagination {
    margin: 3rem 0;
  }

  .pagination-item {
    border-width: 1px;
    float: left;
    width: 50%;

    &:first-child {
      border-bottom-left-radius: 4px;
      border-top-left-radius:    4px;
      margin-bottom: 0;
    }
    &:last-child {
      border-bottom-right-radius: 4px;
      border-top-right-radius:    4px;
      margin-left: -1px;
    }
  }
}

